--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
-<script defer src="index.bundle.js"></script><script defer src="print.bundle.js"></script></head>
+</head>
 
 <body>
     <h1>Leaderboard</h1>
