--- a/src/template.html
+++ b/src/template.html
@@ -33,8 +33,8 @@
         <div id="form-container">
             <h2>Add your score</h2>
             <form action="submit" id="scores-form">
-                <input type="text" id="score-name-input" placeholder="Your name">
-                <input type="text" id="score-number-input" placeholder="Your score">
+                <input type="text" id="score-name-input" placeholder="Your name" required>
+                <input type="text" id="score-number-input" placeholder="Your score" required>
                 <input type="button" id="add-score" value="Submit">
             </form>
         </div>
