--- a/src/template.html
+++ b/src/template.html
@@ -26,7 +26,7 @@
             <h2>Add your score</h2>
             <form action="submit" id="scores-form">
                 <input type="text" id="score-name-input" placeholder="Your name" required>
-                <input type="number" id="score-number-input" placeholder="Your score" required>
+                <input type="number" id="score-number-input" placeholder="Your score" min="0" max="100" required>
                 <input type="submit" id="add-score" value="Submit">
             </form>
         </div>
